[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "accelerate>=1.4.0",
    "datasets>=4.8.0",
    "transformers==5.3.0",
    "sentence-transformers==5.3.0",
    "torch>=2.8.0",
    "tqdm>=4.5.0",
    "wandb>=0.23.1",
    "wn>=0.14.0",
    "openai>=2.15.0",
    "nltk>=3.9.2",
    "matplotlib>=3.10.8",
    "rapidfuzz>=3.14.3",
]
